CORE-6393: Experiment with change of name of RestResource
The trick was to do it in version compatible manner.
